--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           /* border: 1px red solid; */
         }
         body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             height: 100vh; 
             width: 100vw; 
             margin: 0;
@@ -57,6 +60,9 @@
         }  
 
         button {
+            position: fixed;
+            top: 0;
+            left: 0;
             margin: 10px 10px;
           padding: 2px;
           border: 1px orange solid;
