--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         button {
             position: fixed;
-            top: 0;
+            bottom: 0;
             left: 0;
             margin: 10px 10px;
           padding: 2px;
