--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           border: 1px orange solid;
           border-radius: 4px;
             background-color: wheat;
+            z-index: 9999;
         }  
 
         a {
