--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a href="/docs/curriculo.pdf" target="_blank"><img src="images/pdf.png" alt="Imagem" width="100px" height="100px"></a>
     </section>
     
-    <button onclick="shuffleSections(), shuffleZIndex(), changeImage()"><img id="changingImage" src="images/yinyang.png" alt="" width="50px" height="50px"></button>
+    <button onclick="shuffleSections(), shuffleZIndex(), changeImage()"><img id="changingImage" src="images/yinyang.png" alt="Feng Shui" width="50px" height="50px"></button>
 
     <script>
         function startDrag(event) {
