--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
     
     <section id="drag5" onmousedown="startDrag(event)" ontouchstart="startDrag(event)">
-        <a href="/docs/curriculo.pdf" target="_blank"><img src="images/pdf.png" alt="Imagem" width="100px" height="100px"></a>
+        <a href="https://diegoaveiro.github.io/curriculum/" target="_blank"><img src="images/pdf.png" alt="Imagem" width="100px" height="100px"></a>
     </section>
     
     <button onclick="shuffleSections(), shuffleZIndex(), changeImage()"><img id="changingImage" src="images/yinyang.png" alt="Feng Shui" width="50px" height="50px"></button>
