--- a/home.html
+++ b/home.html
@@ -97,7 +97,7 @@
 <body>
 
     <section id="drag1" onclick="confirmRedirect()" onmousedown="startDrag(event)" ontouchstart="startDrag(event)">
-        <a href="https://www.linkedin.com/in/diegoaveirobs/" target="_blank"><h1>My Dynamic Portfolio</h1></a>
+        <a href="https://www.linkedin.com/in/diegoaveiro/" target="_blank"><h1>My Dynamic Portfolio</h1></a>
     </section>
 
     <section id="drag2" onmousedown="startDrag(event)" ontouchstart="startDrag(event)">
