--- a/home.html
+++ b/home.html
@@ -29,6 +29,10 @@
             touch-action: none;
         }
 
+        #drag1 {
+            z-index: 11;
+        }
+
         img {
             max-width: 100%;
             height: auto;
