--- a/home.html
+++ b/home.html
@@ -120,6 +120,10 @@
         <a href="https://diegoaveiro.github.io/curriculum/" target="_blank"><img src="images/pdf.png" alt="Imagem" width="100px" height="100px"></a>
     </section>
     
+    <section id="drag6" onmousedown="startDrag(event)" ontouchstart="startDrag(event)">
+        <a href="https://diegoaveiro.github.io/todolist/" target="_blank"><img src="images/todo.png" alt="Imagem" width="100px" height="100px"></a>
+    </section>
+    
     <footer>
         <div><button onclick="shuffleSections(), shuffleZIndex(), changeImage()"><img id="changingImage" src="images/yinyang.png"    alt="" width="50px" height="50px"></button></div>
 
